--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Blockchain Resources
+description: A curated list gathered from various sources and also contributed by enthusiastic folks to build a helpful list for everyone to benefit from.
 
 theme: jekyll-theme-cayman
+
+show_downloads: false
