--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: Blockchain Resources
 description: A curated list gathered from various sources and also contributed by enthusiastic folks to build a helpful list for everyone to benefit from.
 
 theme: jekyll-theme-cayman
+
+favicon: favicon.ico
