--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description: A curated list gathered from various sources and also contributed b
 theme: jekyll-theme-cayman
 
 google_analytics: UA-98002907-3
+
+telegram_url: https://t.me/blockchainedindia
